[package]
name = "cargo_doodle"
version = "0.1.0"
authors = ["Johanna Okas <johannaokas@gmail.com>"]
edition = "2024"

[dependencies]
egui = "0.34.1"
eframe = { version = "0.34.1", features = ["persistence"] }

# Serde is only needed for app persistence
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.44"